# dsr-feature-eng-ml

./: .gitignore  README.md  pyproject.toml
src/dsr_feature_eng_ml/: __init__.py  constants.py  enums.py
src/dsr_feature_eng_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dsr_feature_eng_ml/evaluation/: __init__.py  data_splits.py  feature_importance.py  model_configuration.py  model_evaluation.py  model_evaluation_config.py  model_results.py  validation_results.py
src/dsr_feature_eng_ml/models/: __init__.py  decision_tree.py  logistic_regression.py  model_specification.py  random_forest.py
tests/: README.md  __init__.py  conftest.py  test_evaluation.py  test_models.py
